using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class PlayerAnimation : MonoBehaviour
{
    public Animator animator;

    public readonly string MOVE_ANIM_PARAM = "Move";
    public readonly string IS_AIMING_ANIM_PARAM = "IsAiming"; 
    public readonly string FIRING_RIFLE_ANIM = "Firing Rifle";
    public readonly string WEAPON_STATE_ANIM_PARAM = "WeaponState"; 
    public readonly string RIFLE_AIM_IDLE_ANIM = "Rifle Aim Idle";
    public readonly string DEAD_ANIM = "Death";

    
}
